# Beckman-Mandelbrot

./: .clang-format  links.txt
archived_code/base/: calc.cpp
archived_code/color/: Makefile  listtest.ppm
archived_code/initial/: Makefile
archived_code/intrinsic/: Makefile  calc  fullvector.cpp  oldmath.cpp  primary.cpp
archived_code/multi/: Makefile
archived_code/oldcode/: firstversion.cpp
archived_code/threaded/: color.cpp  threaded.cpp
array/oldsplit/: imag.cpp
array/revamp/: .ycm_extra_conf.py  Makefile  calc.cpp  imag.cpp  mandlebrot  primary.cpp  proto.h  test.pgm  write.cpp
array/simar/: helloascii.cpp
initial/: mandlebrot  mandlebrot.cpp  test.pgm
intrinsic/base/: Makefile  bitwise.cpp  calc  calc_simd.cpp  cleancalc_simd.cpp  fullvector.cpp  haha.pgm  objcalc_simd.cpp  oldmath.cpp  write.cpp
intrinsic/sandbox/: Makefile  bitwise  bitwise.cpp  haha  intrin  intrinsic.cpp  vs.cpp
multi/: Makefile  calc.cpp  mandlebrot  mandlebrot.cpp  primary.cpp
notes/: README.md  times.txt
release/: .gitignore
rgb/: CMakeLists.txt  Makefile
rgb/array/src/: calc.cpp  calc_simd.cpp
rgb/include/: proto.h
rgb/src/: calc.cpp  imag.cpp  primary.cpp  write.cpp
rgb/vector/: CMakeLists.txt  README.txt
rgb/vector/color/: attempt.cpp
rgb/vector/src/: write.cpp
singular/color/: list.txt
singular/initial/: mandlebrot.cpp  test.pgm
singular/multi/: mandlebrot  proto.h  (+1 more)
src/: .gitignore  Makefile  algo.cpp  dynamic.cpp  fullvector.cpp  inline.cpp  mandel.cu  mandel1.cu  threaded.cpp
vector/: calc.cpp  imag.cpp  primary.cpp  write.cpp
(+30 files in other folders)
